--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    productFlavors{
+        free{
+            applicationId "com.example.disen.builditbigger.free"
+        }
+        paid{
+            applicationId "com.example.disen.builditbigger.paid"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -32,7 +40,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     testCompile 'junit:junit:4.12'
     compile project(path: ':backend', configuration: 'android-endpoints')
